# vibe-data-science-2nd-try

./: CLAUDE.md  README.md  pyproject.toml  view_metrics.py  view_metrics_sql.py  view_mlflow_metrics.py
.claude/: settings.json
.github/workflows/: README.md  ci.yml
configs/: default.yaml
docs/: dataset.md  pipeline_architecture.md  problem.md
mlflow-artifacts/: mlflow.db
mlruns/0/models/m-03b156ce644e40a0a0bbd02bdad4a5ce/artifacts/: MLmodel  conda.yaml  model.lgb
mlruns/0/models/m-0736141862eb48448678305a97a8cbb5/artifacts/: MLmodel  requirements.txt
mlruns/0/models/m-2509853b5dd64e06a944e33a06dc4ca7/artifacts/: MLmodel
mlruns/0/models/m-298bf149934e461096b61b39461666e3/artifacts/: MLmodel
mlruns/0/models/m-35907079d255466eb712eaf4ac7dbd6d/artifacts/: MLmodel
mlruns/0/models/m-700ca42bade241f7a445bcaef5fd949d/artifacts/: MLmodel
mlruns/0/models/m-d33ce51e8abf4523aa0766cede16e228/artifacts/: MLmodel
output/lightgbm_model/: model.pkl
src/vibe_data_science_2nd_try/: __init__.py  cli.py  pipeline.py
src/vibe_data_science_2nd_try/config/: __init__.py  loader.py  settings.py
src/vibe_data_science_2nd_try/data/: __init__.py  loader.py  preprocessing.py  schema.py
src/vibe_data_science_2nd_try/models/: __init__.py  base.py  evaluation.py  factory.py  lightgbm_model.py
src/vibe_data_science_2nd_try/utils/: __init__.py  logging.py  mlflow.py  mlflow_types.py
tests/: conftest.py
tests/config/: test_settings.py
tests/data/: test_loader.py  test_preprocessing.py
tests/models/: test_lightgbm_model.py
tests/utils/: test_logging.py
(+3 files in other folders)
