[project]
name = "vibe-data-science-2nd-try"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "snrsw", email = "ale.nnn.r@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "kaleido>=1.0.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.1.4",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.5.0",
    "structlog>=24.1.0",
    "tomli>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "kaggle>=1.7.4.5",
]
